--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "html2pdf.js": "^0.10.1",
+    "primeicons": "^6.0.1",
+    "primevue": "^3.49.1",
+    "v-easy-dialog": "^1.0.6",
     "vue": "^3.2.13",
     "vue-html2pdf": "^1.8.0"
   },
